openshift/supervisord-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: supervisord-pod
  labels:
    app: odo-tool
spec:
  containers:
  - name: supervisord-container
    image: 172.30.1.1:5000/k8s-supervisor/supervisord:v1
