openshift/spring-boot-supervisord.yaml
apiVersion: v1
kind: List
metadata:
items:
- apiVersion: apps.openshift.io/v1
  kind: DeploymentConfig
  metadata:
    labels:
      app: spring-boot-supervisord
    name: spring-boot-supervisord
  spec:
    replicas: 1
    selector:
      app: spring-boot-supervisord
      deploymentconfig: spring-boot-supervisord
    strategy:
      activeDeadlineSeconds: 21600
      resources: {}
      rollingParams:
        intervalSeconds: 1
        maxSurge: 25%
        maxUnavailable: 25%
        timeoutSeconds: 600
        updatePeriodSeconds: 1
      type: Rolling
    template:
      metadata:
        labels:
          app: spring-boot-supervisord
          deploymentconfig: spring-boot-supervisord
      spec:
        volumes:
        - name: shared-data
          emptyDir: {}
        #initContainers:
        #- image: 172.30.1.1:5000/k8s-supervisor/supervisord:1.0
        #  imagePullPolicy: IfNotPresent
        #  name: supervisord
        containers:
        - image: docker-registry.default.svc:5000/k8s-supervisor/spring-boot-http
          imagePullPolicy: IfNotPresent
          name: spring-boot-supervisord
          ports:
          - containerPort: 8080
            protocol: TCP
          - containerPort: 8778
            protocol: TCP
          - containerPort: 9779
            protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
        dnsPolicy: ClusterFirst
        restartPolicy: Always
        schedulerName: default-scheduler
        securityContext: {}
        terminationGracePeriodSeconds: 30
    test: false
    triggers:
    - type: ConfigChange
    - imageChangeParams:
        automatic: true
        containerNames:
        - spring-boot-supervisord
        from:
          kind: ImageStreamTag
          name: spring-boot-http:1.0
      type: ImageChange
- apiVersion: v1
  kind: Service
  metadata:
    labels:
      app: spring-boot-supervisord
    name: spring-boot-supervisord
  spec:
    clusterIP:
    ports:
    - name: 8080-tcp
      port: 8080
      protocol: TCP
      targetPort: 8080
    - name: 8778-tcp
      port: 8778
      protocol: TCP
      targetPort: 8778
    selector:
      app: spring-boot-supervisord
      deploymentconfig: spring-boot-supervisord
    sessionAffinity: None
    type: ClusterIP
  status:
    loadBalancer: {}
- apiVersion: v1
  kind: ImageStream
  metadata:
    labels:
      app: spring-boot-supervisord
    name: spring-boot-http
  spec:
    lookupPolicy:
      local: false
  status:
    dockerImageRepository: docker-registry.default.svc:5000/k8s-supervisor/spring-boot-http:1.0
- apiVersion: v1
  kind: ImageStream
  metadata:
    labels:
      app: spring-boot-supervisord
    name: supervisord
  spec:
    lookupPolicy:
      local: false
  status:
    dockerImageRepository: docker-registry.default.svc:5000/k8s-supervisor/supervisord:1.0
